Added Dagger2 as a dependency Implemented BaseActivity and BaseFragment to facilitate injection Made Gson, PreferenceManager and TMDBService injectable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="sort_order">Sort Order</string>
     <string name="highest_rated">Highest Rated</string>
     <string name="most_popular">Most Popular</string>
+    <string name="prefs_sort_by_highest_rated">Sort by Highest Rated</string>
 </resources>
