--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="highest_rated">Highest Rated</string>
     <string name="most_popular">Most Popular</string>
     <string name="prefs_sort_by_highest_rated">Sort by Highest Rated</string>
+    <string name="tmdb_api_call_failure">TMDB API Call Failure: %s</string>
 </resources>
