--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="movie_detail">Movie Detail</string>
     <string name="about">About</string>
     <string name="loading">Loading&#8230;</string>
+    <string name="loading_failed">Loading Failed!</string>
     <string name="sort_order">Sort Order</string>
     <string name="highest_rated">Highest Rated</string>
     <string name="most_popular">Most Popular</string>
