--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Popular Movies</string>
     <string name="movie_detail">Movie Detail</string>
+    <string name="details">Details</string>
+    <string name="reviews">Reviews</string>
     <string name="about">About</string>
     <string name="loading">Loading&#8230;</string>
     <string name="loading_failed">Loading Failed!</string>
@@ -24,4 +26,5 @@
     <string name="tmdb_logo">TMDb Logo</string>
     <string name="movie_poster">Movie Poster</string>
     <string name="cannot_start_activity_to_view_trailer">Cannot start activity to view trailer</string>
+    <string name="author">Author:</string>
 </resources>
