Added a ContentProvider for storing and retrieving favorite movies in a local sqlite database Added a transient member isFavorite to Movie Added a favorite UI element to the movie detail fragment Fixed many code inspection issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="movie_poster">Movie Poster</string>
     <string name="cannot_start_activity_to_view_trailer">Cannot start activity to view trailer</string>
     <string name="author">Author:</string>
+    <string name="content_authority">nl.erikduisters.popularmovies</string>
 </resources>
