--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="author">Author:</string>
     <string name="content_authority">nl.erikduisters.popularmovies</string>
     <string name="no_favorites_movies_yet">You don\'t have any favorite movies yet</string>
+    <string name="no_trailers_available">No trailers available</string>
 </resources>
