--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="content_authority">nl.erikduisters.popularmovies</string>
     <string name="no_favorites_movies_yet">You don\'t have any favorite movies yet</string>
     <string name="no_trailers_available">No trailers available</string>
+    <string name="no_reviews_available">No reviews available</string>
 </resources>
